# AUM

./: .gitignore  AUM-design.md  AUM-metal-plan.md  AUM-nvidia-plan.md  AUM-Ø.md  AUTHORS  README.md  SYN-1B.md  pyproject.toml  setup.py  test.py
aum_ssm/: __init__.py
aum_ssm/distributed/: tensor_parallel.py
aum_ssm/models/: aum_lm.py  config_aum.py
aum_ssm/modules/: evidence_layer.py  ground_attn.py  modulate.py  norm.py  silence.py  ssd_reference.py  unfold.py
aum_ssm/ops/metal/: __init__.py  silence_flat.py  silence_metal.py  unfold_metal.py
aum_ssm/ops/triton/: k_activations.py  layer_norm.py  ssd_bmm.py  ssd_chunk_scan.py  ssd_chunk_state.py  ssd_combined.py  ssd_state_passing.py  unfold_triton.py
aum_ssm/ops/triton/unfold/: angle_dt.py  siso_bwd.py  siso_combined.py  siso_fwd.py  siso_step.py
aum_ssm/training/: __init__.py  counterfactual.py  diagnostics.py  gate.py  losses.py  schedule.py  trainer.py
aum_ssm/training/tasks/: __init__.py  synthetic.py
aum_ssm/utils/: generation.py  hf.py
kernels/: __init__.py
kernels/metal/: NOTICE  __init__.py  aum_metal.mm
kernels/metal/src/: aum_decode.metal  aum_silence.metal  aum_unfold.metal  mamba2.metal  mamba2_bwd.metal
kernels/triton/: __init__.py  cross_entropy.py  silence.py
tests/: test_decode.py  test_generation.py  test_m1_model.py  test_metal.py  test_optim.py  test_phase3.py  test_phase4.py  test_phase5.py  test_silence.py  test_syn_generation.py  test_triton_ce.py  test_triton_silence.py  test_triton_unfold.py
tests/ops/: test_aum_unfold_ref.py
tests/ops/triton/: conftest.py  test_layernorm_gated.py  test_siso.py
tests/ops/triton_kernels/: test_siso.py
train/: __init__.py  datasets  gen_SYN-1B.py  init.py  launch.sh  muon.py  prepare_data.py  tokenizer.py  train.py
train/syn/: __init__.py  alphabet.py  forward_probe.py  gen_f1.py  gen_f2.py  gen_f3.py  gen_f4.py  gen_f5.py  harness_readers.py  pack.py  qa.py  registry.py  render.py  schema.py
