[project]
name = "aum_ssm"
description = "AUM-Ø: Attentive Unfolding Modulation with Silence"
readme = "README.md"
authors = [
    { name = "Eric Hartford" }
]
requires-python = ">= 3.9"
dynamic = ["version"]
license = { file = "LICENSE" }
keywords = ["pytorch", "state-space model", "adaptive inference", "triton"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix"
]
dependencies = [
    "torch",
    "triton>=3.5.0",
    "einops",
    "transformers",
    "packaging",
    "setuptools>=61.0.0",
]

[project.optional-dependencies]
causal-conv1d = [
    "causal-conv1d>=1.4.0"
]
dev = [
    "pytest"
]

[build-system]
# torch is intentionally excluded: pip's build isolation would install torch-cpu from PyPI,
# ignoring the user's CUDA-enabled torch. Install torch first, then `pip install -e .`.
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "packaging",
]
build-backend = "setuptools.build_meta"
