[project]
name = "aum_ssm"
description = "AUM-Ø: Attentive Unfolding Modulation with Silence"
readme = "README.md"
authors = [
    { name = "Eric Hartford" }
]
requires-python = ">= 3.9"
dynamic = ["version"]
license = { file = "LICENSE" }
keywords = ["pytorch", "state-space model", "adaptive inference", "triton"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix"
]
# The reference backend is pure PyTorch (CPU / Apple MPS / CUDA). triton is only needed for the
# NVIDIA kernel backend; transformers only for HF checkpoint/generation conveniences and data
# prep. All such imports are lazy — the package, tests, and Metal backend run without them.
dependencies = [
    "torch",
    "einops",
    "packaging",
    "setuptools>=61.0.0",
]

[project.optional-dependencies]
triton = [
    "triton>=3.5.0"
]
hf = [
    "transformers"
]
data = [
    "transformers",
    "datasets",
    "numpy",
]
causal-conv1d = [
    "causal-conv1d>=1.4.0"
]
dev = [
    "pytest"
]

[build-system]
# torch is intentionally excluded: pip's build isolation would install torch-cpu from PyPI,
# ignoring the user's CUDA-enabled torch. Install torch first, then `pip install -e .`.
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "packaging",
]
build-backend = "setuptools.build_meta"
